--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "abspath-0.1.tar.bz2": da9d33e1b64df0d43d02c10230c13a8efdd9c1b8
+  abspath-0.1.tar.bz2: da9d33e1b64df0d43d02c10230c13a8efdd9c1b8
